# weft

./: package.json  tsconfig.json
api/: respond-with-env.ts
public/: index.html  manifest.json
src/: AboutPage.scss  AboutPage.tsx  App.css  App.scss  App.test.tsx  App.tsx  CanvasRangesEditor.tsx  DownloadRecording.tsx  DownloadsList.scss  DownloadsList.tsx  FullscreenToggle.tsx  Homescreen.scss  Homescreen.tsx  IncludeMedia.tsx  Modal.scss  Modal.tsx  Notifications.scss  Notifications.tsx  PermissionAlert.tsx  RangesEditor.tsx  RangesListEditor.scss  RangesListEditor.tsx  RecordOptions.scss  RecordOptions.tsx  Recorder.scss  Recorder.tsx  Recording.ts  RecordingActionsToolbar.scss  RecordingActionsToolbar.tsx  RecordingPlayer.scss  RecordingPlayer.tsx  RecordingSearch.scss  RecordingSearch.tsx  RecordingsList.scss  RecordingsList.tsx  Router.test.tsx  Router.tsx  SectionPage.scss  SectionPage.tsx  Settings.scss  (+31 more)
src/unused/: Canvas.tsx  CanvasRangesEditor.tsx  RangesEditor.scss  RangesEditor.tsx  background-drawing.ts
weft-server/: .gitignore  Cargo.toml
weft-server/src/: auth.rs  main.rs  models.rs  rejections.rs
weft-server/src/auth/: mod.rs  passwords.rs  tokens.rs
