[package]
name = "weft-server"
version = "0.1.0"
authors = ["Armando Perez <gmandx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
listenfd = "^0.3"
thiserror = "^1"
anyhow = "^1"
tokio = { version = "^0.2", features = ["rt-threaded","macros","blocking"] }
hyper = "*"
warp = "^0.2"
futures = "^0.3"
serde = { version = "^1.0", features = ["derive"] }
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "postgres", "runtime-tokio", "macros", "uuid", "json", "chrono", "offline" ] }
uuid = { version = "^0.8", default-features = false, features = [ "std", "serde" ] }
url = { version = "^2", features = [ "serde" ]}
chrono = { version = "^0.4", features = [ "serde" ]}
argonautica = "^0.2"
biscuit = "^0.4"
base64 = "*"
regex = "*"
oauth2 = "^3"
